Fix profile page alignment issues

--- a/packages/cd-components/src/organisms/post/post.module.scss
+++ b/packages/cd-components/src/organisms/post/post.module.scss
@@ -3,7 +3,8 @@
 
 .compact_container {
   display: flex;
-  width: 38.51rem;
+  width: 100%;
+
   height: max-content;
   background: white;
   margin: 0.5rem 0;
